--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,7 +8,8 @@
 KRY status poller
 <ul id="service-list">
 </ul>
-<input type="text" id="url-name">
+<input type="text" id="service-url" placeholder="My Service">
+<input type="text" id="service-name" placeholder="http://myservice.com">
 <button id="post-service">Save</button>
 
 </body>
