✨ ensure new services url are valid

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,7 +16,7 @@ KRY status poller
     </tr>
 </table>
 <input type="text" id="service-name" placeholder="My Service">
-<input type="text" id="service-url" placeholder="http://myservice.com">
+<input type="text" id="service-url" placeholder="myservice.com">
 <button id="post-service">Save</button>
 
 </body>
